compiler/testData/diagnostics/tests/regressions/ea43298.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
import A.<!SYNTAX!><!>;

class A

/* GENERATED_FIR_TAGS: classDeclaration */
